fixed overflow bug

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
   line-height: 1;
 }
 
-body{
+body, html{
   position: relative;
   height: 100vh;
   width: 100vw;
@@ -18,6 +18,7 @@ body{
   align-items: center;
   font-family: sans-serif;
   font-size: 12px;
+  overflow: hidden;
 }
 
 h1{
